Test and Production: Fixed Relative links for GitPages publishing.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         type="text/css">
     <!-- Local Stylesheet: Style -->
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <link rel="stylesheet" href="../CitiesInCountries/assets/styles/style.css">
     <title>Cities in Countries Data</title>
 
     <!-- Favicon, a gorgeous 'G' for Gaff/Gaffney/Google... -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../CitiesInCountries/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../CitiesInCountries/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../CitiesInCountries/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="../CitiesInCountries/assets/images/site.webmanifest">
 </head>
 
 <body>
@@ -87,7 +87,7 @@
                     </header>
                     <div class="cssmodal-container">
                         <div>
-                            <p>Please click on the Google Map Markers - <img src="/assets/images/GoogleMapMarker.png"
+                            <p>Please click on the Google Map Markers - <img src="../CitiesInCountries/assets/images/GoogleMapMarker.png"
                                     width="10" alt="Google Map Marker"> - for information on the Capital City of your
                                 choice.</p>
                             <p>Click on the Overview button &nbsp; <button class="button">Overview</button>for Country
@@ -207,6 +207,9 @@
                                 class="modal-link-text">My Resumé.</a></div>
                         <div><a href="https://github.com/NaoiseGaffney" target="_blank" class="modal-link-text">My
                                 GitHub.</a></div>
+                        <div><a href="https://github.com/NaoiseGaffney/CitiesInCountries" target="_blank"
+                                class="modal-link-text">The
+                                documentation and source code on GitHub of this website, my 2<sup>nd</sup> Code Institute Milestone Project.</a></div>
                         <div><a href="https://ptd--gaffco.repl.co/index.html" target="_blank"
                                 class="modal-link-text">GaffCo Consulting Professional Communication Competence.</a>
                         </div>
@@ -239,7 +242,7 @@
 </script>
 
 <!-- EmailJS sendmail() -->
-<script src="/assets/scripts/sendemail.js"></script>
+<script src="../CitiesInCountries/assets/scripts/sendemail.js"></script>
 
 <!-- Google Firebase Firestore noSQL DB -->
 <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -271,13 +274,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
 
 <!-- Load Google Map API and local maps.js here to ensure it loads after everything else. -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async
-    defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async></script>
 <!-- Google Maps Navigation Controls JS Script -->
-<script src="/assets/scripts/mapControls.js" defer></script>
+<script src="../CitiesInCountries/assets/scripts/mapControls.js" defer></script>
 <!-- Main JS Script -->
-<script src="/assets/scripts/maps.js" defer></script>
+<script src="../CitiesInCountries/assets/scripts/maps.js" defer></script>
 <!-- D3 JS Script for Stats/Graphs -->
-<script src="/assets/scripts/d3Stats.js"></script>
+<script src="../CitiesInCountries/assets/scripts/d3Stats.js"></script>
 
 </html>
