--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -9,14 +9,14 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         type="text/css">
     <!-- Local Stylesheet: Style -->
-    <link rel="stylesheet" href="/test/CSS/gStyle.css">
+    <link rel="stylesheet" href="../CSS/gStyle.css">
     <title>Cities in Countries Data</title>
 
     <!-- Favicon, a gorgeous 'G' for Gaff/Gaffney/Google... -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
-    <link rel="manifest" href="/assets/images/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon-16x16.png">
+    <link rel="manifest" href="../../assets/images/site.webmanifest">
 </head>
 
 <body>
@@ -93,7 +93,7 @@
                     </header>
                     <div class="cssmodal-container">
                         <!-- <div><img src="/assets/images/MarkerTTModal.png" width="200"></div> -->
-                        <div><p>Please click on the Google Map Markers - <img src="/assets/images/GoogleMapMarker.png" width="10" alt="Google Map Marker"> - for information on the Capital City of your choice.</p>
+                        <div><p>Please click on the Google Map Markers - <img src="../../assets/images/GoogleMapMarker.png" width="10" alt="Google Map Marker"> - for information on the Capital City of your choice.</p>
                         <p>Click on the Overview button &nbsp; <button class="button">Overview</button>for Country details, and click on the Statistics button &nbsp; <button class="button">Statistics</button>for simple statistics.</p><p>The Footer links are: About - <i class="fa fa-exclamation" aria-hidden="true"></i>
                         <span class="sr-only">About</span> - which is this modal, API's - <i class="fa fa-file-code-o" aria-hidden="true"></i><span class="sr-only">API's</span> - providing links to the descriptions of the API's used on this website to provide data and functionality, Code Snippets - <i class="fa fa-code" aria-hidden="true"></i>
                         <span class="sr-only">Code Snippets</span> - providing links to tutorials and courses with knowledge and skills used on this website, Contact Form - <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -179,6 +179,7 @@
                     <div class="cssmodal-container">
                         <div><a href="https://naoisegaffney.github.io/Resume/index.html" target="_blank" class="modal-link-text">My Resumé.</a></div>
                         <div><a href="https://github.com/NaoiseGaffney" target="_blank" class="modal-link-text">My GitHub.</a></div>
+                        <div><a href="https://github.com/NaoiseGaffney/CitiesInCountries" target="_blank" class="modal-link-text">The documentation and source code on GitHub of this website, my 2<sup>nd</sup> Code Institute Milestone Project.</a></div>
                         <div><a href="https://ptd--gaffco.repl.co/index.html" target="_blank" class="modal-link-text">GaffCo Consulting Professional Communication Competence.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
@@ -209,7 +210,7 @@
 </script>
 
 <!-- EmailJS sendmail() -->
-<script src="/test/JavaScript/sendemail.js"></script>
+<script src="../JavaScript/sendemail.js"></script>
 
 <!-- Google Firebase Firestore noSQL DB -->
 <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -242,13 +243,12 @@
 
 <!-- Load Google Map API and local maps.js here to ensure it loads after everything else. -->
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC63AOgIhSH-DxdfryU-v6kmGh04RbLjc0&callback=initMap" async defer></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async
-    defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async></script>
 <!-- Google Maps Navigation Controls JS Script -->
-<script src="/test/JavaScript/gMaps.js" defer></script>
+<script src="../JavaScript/gMaps.js" defer></script>
 <!-- Main JS Script -->
-<script src="/test/JavaScript/gStyle.js" defer></script>
+<script src="../JavaScript/gStyle.js" defer></script>
 <!-- D3 JS Script for Stats/Graphs -->
-<script src="/test/JavaScript/d3Stats.js"></script>
+<script src="../JavaScript/d3Stats.js"></script>
 
 </html>
