--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -173,7 +173,7 @@
                 <div class="cssmodal-content">
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
-                        <h3><i class="fa fa-user" id="fa-user" aria-hidden="true"></i>
+                        <h3><i class="fa fa-user" id="fa-user-css-modal" aria-hidden="true"></i>
                         <span class="sr-only">Naoise Olof Seán Gaffney</span>&nbsp;&nbsp;&nbsp;Naoise Olof Seán Gaffney</h3>
                     </header>
                     <div class="cssmodal-container">
@@ -198,8 +198,6 @@
             <button class="button" id="close" onclick="closeModal()">Close</button>
         </div>
     </aside>
-
-</body>
 
 <!-- EmailJS Script for the Email Form -->
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
@@ -243,12 +241,15 @@
 
 <!-- Load Google Map API and local maps.js here to ensure it loads after everything else. -->
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC63AOgIhSH-DxdfryU-v6kmGh04RbLjc0&callback=initMap" async defer></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap"
+    async></script>
 <!-- Google Maps Navigation Controls JS Script -->
 <script src="../JavaScript/gMaps.js" defer></script>
 <!-- Main JS Script -->
 <script src="../JavaScript/gStyle.js" defer></script>
 <!-- D3 JS Script for Stats/Graphs -->
 <script src="../JavaScript/d3Stats.js"></script>
+
+</body>
 
 </html>
