Test and Production: further testing of the blocking  function and the 'async' and 'defer' attributes. An anomlay occurs when reloading with the Chrome Inspection window open. One lives, and one learns. Blocking function in initMap, and the 2 JS Script attrbutes set in index.html (gTest.html).

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <button class="button" id="close" onclick="closeModal()">Close</button>
         </div>
     </aside>
-    
+
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
 <script>
     (function () {
@@ -256,7 +256,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap"
-    async></script>
+    async defer></script>
 
 <script src="../CitiesInCountries/assets/scripts/mapControls.js" defer></script>
 <script src="../CitiesInCountries/assets/scripts/maps.js" defer></script>
