--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -242,7 +242,7 @@
 <!-- Load Google Map API and local maps.js here to ensure it loads after everything else. -->
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC63AOgIhSH-DxdfryU-v6kmGh04RbLjc0&callback=initMap" async defer></script> -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap"
-    async></script>
+    async defer></script>
 <!-- Google Maps Navigation Controls JS Script -->
 <script src="../JavaScript/gMaps.js" defer></script>
 <!-- Main JS Script -->
