--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -239,10 +239,7 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
 
-<!-- Load Google Map API and local maps.js here to ensure it loads after everything else. -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC63AOgIhSH-DxdfryU-v6kmGh04RbLjc0&callback=initMap" async defer></script> -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap"
-    async defer></script>
+
 <!-- Google Maps Navigation Controls JS Script -->
 <script src="../JavaScript/gMaps.js" defer></script>
 <!-- Main JS Script -->
@@ -250,6 +247,11 @@
 <!-- D3 JS Script for Stats/Graphs -->
 <script src="../JavaScript/d3Stats.js"></script>
 
+<!-- Load Google Map API and local maps.js here to ensure it loads after everything else. -->
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC63AOgIhSH-DxdfryU-v6kmGh04RbLjc0&callback=initMap" async defer></script> -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async
+    defer></script>
+    
 </body>
 
 </html>
