Test: Cleaning up code, before production deployment. Documentation: rewriting passages before running and documenting further tests.

--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -243,7 +243,7 @@
 <!-- Google Maps Navigation Controls JS Script -->
 <script src="../JavaScript/gMaps.js" defer></script>
 <!-- Main JS Script -->
-<script src="../JavaScript/gStyle copy.js" defer></script>
+<script src="../JavaScript/gStyle.js" defer></script>
 <!-- D3 JS Script for Stats/Graphs -->
 <script src="../JavaScript/d3Stats.js"></script>
 
