--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap"
-    async defer></script>
-
 <script src="../CitiesInCountries/assets/scripts/mapControls.js" defer></script>
 <script src="../CitiesInCountries/assets/scripts/maps.js" defer></script>
 <script src="../CitiesInCountries/assets/scripts/d3Stats.js"></script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async defer></script>
+
 </body>
 
 </html>
