--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -109,15 +109,15 @@
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-file-code-o" id="fa-file-code-o-css-modal" aria-hidden="true"></i>
-                            <span class="sr-only">API's</span>&nbsp;&nbsp;&nbsp;Application Programming Interfaces</h3>
+                            <span class="sr-only">API's</span>&nbsp;&nbsp;&nbsp;Links&#58; Application Programming Interfaces</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <div><a href="https://developers.google.com/maps/documentation/javascript/tutorial" target="_blank" class="modal-link-text">Google Maps JavaScript API Description - to create the map and markers.</a></div>
-                        <div><a href="https://openweathermap.org/api/one-call-api" target="_blank" class="modal-link-text">OpenWeather API Description - adding real-time weather information to the marker tool-tips.</a></div>
-                        <div><a href="https://github.com/d3/d3/blob/master/API.md" target="_blank" class="modal-link-text">D3 API Description - to display dynamic graphs and statistics.</a></div>
-                        <div><a href="https://www.emailjs.com/" target="_blank" class="modal-link-text">EmailJS API Description - to enjoy user feedback to improve the website.</a></div>
-                        <div><a href="https://firebase.google.com/" target="_blank" class="modal-link-text">"Built with Firebase &reg;" - to store and retrieve D3 and City data.</a></div>
-                        <div><a href="https://restcountries.eu/" target="_blank" class="modal-link-text">REST Countries EU API Description - Global Country data for Overview and Statistics Modals.</a></div>
+                        <div><a href="https://developers.google.com/maps/documentation/javascript/tutorial" target="_blank" class="modal-link-text">-> Google Maps JavaScript API Description - to create the map and markers.</a></div>
+                        <div><a href="https://openweathermap.org/api/one-call-api" target="_blank" class="modal-link-text">-> OpenWeather API Description - adding real-time weather information to the marker tool-tips.</a></div>
+                        <div><a href="https://github.com/d3/d3/blob/master/API.md" target="_blank" class="modal-link-text">-> D3 API Description - to display dynamic graphs and statistics.</a></div>
+                        <div><a href="https://www.emailjs.com/" target="_blank" class="modal-link-text">-> EmailJS API Description - to enjoy user feedback to improve the website.</a></div>
+                        <div><a href="https://firebase.google.com/" target="_blank" class="modal-link-text">-> "Built with Firebase &reg;" - to store and retrieve D3 and City data.</a></div>
+                        <div><a href="https://restcountries.eu/" target="_blank" class="modal-link-text">-> REST Countries EU API Description - Global Country data for Overview and Statistics Modals.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
@@ -129,14 +129,14 @@
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-code" id="fa-code-css-modal" aria-hidden="true"></i>
-                            <span class="sr-only">Code Snippets</span>&nbsp;&nbsp;&nbsp;Code Snippets</h3>
+                            <span class="sr-only">Code Snippets</span>&nbsp;&nbsp;&nbsp;Links&#58; Code Snippets</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <div><a href="https://codeinstitute.net/" target="_blank" class="modal-link-text">Google Maps API - Code Institute walkthrough by Matt Rudge.</a></div>
-                        <div><a href="https://youtu.be/Zxf1mnP5zcw" target="_blank" class="modal-link-text">Google Maps API - Bill Traversy @ Traversy Media.</a></div>
-                        <div><a href="https://youtu.be/GXrDEA3SIOQ" target="_blank" class="modal-link-text">OpenWeather API - OpenWeather API JavaScript example and walkthrough by Shanjah Raj.</a></div>
-                        <div><a href="https://www.udemy.com/course/build-data-uis-with-d3-firebase/" target="_blank" class="modal-link-text">Udemy Course on D3 & Firebase by Shaun Pelling.</a></div>
-                        <div><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=2508942" target="_blank" class="modal-link-text">Udemy Course on JavaScript the Complete Guide 2020 by Maximilian Schwarzmüller.</a></div>
+                        <div><a href="https://codeinstitute.net/" target="_blank" class="modal-link-text">-> Google Maps API - Code Institute walkthrough by Matt Rudge.</a></div>
+                        <div><a href="https://youtu.be/Zxf1mnP5zcw" target="_blank" class="modal-link-text">-> Google Maps API - Bill Traversy @ Traversy Media.</a></div>
+                        <div><a href="https://youtu.be/GXrDEA3SIOQ" target="_blank" class="modal-link-text">-> OpenWeather API - OpenWeather API JavaScript example and walkthrough by Shanjah Raj.</a></div>
+                        <div><a href="https://www.udemy.com/course/build-data-uis-with-d3-firebase/" target="_blank" class="modal-link-text">-> Udemy Course on D3 & Firebase by Shaun Pelling.</a></div>
+                        <div><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=2508942" target="_blank" class="modal-link-text">-> Udemy Course on JavaScript the Complete Guide 2020 by Maximilian Schwarzmüller.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
@@ -174,13 +174,13 @@
                     <header class="cssmodal-container">
                         <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-user" id="fa-user-css-modal" aria-hidden="true"></i>
-                        <span class="sr-only">Naoise Olof Seán Gaffney</span>&nbsp;&nbsp;&nbsp;Naoise Olof Seán Gaffney</h3>
+                        <span class="sr-only">Naoise Olof Seán Gaffney</span>&nbsp;&nbsp;&nbsp;Links&#58; Naoise Olof Seán Gaffney</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <div><a href="https://naoisegaffney.github.io/Resume/index.html" target="_blank" class="modal-link-text">My Resumé.</a></div>
-                        <div><a href="https://github.com/NaoiseGaffney" target="_blank" class="modal-link-text">My GitHub.</a></div>
-                        <div><a href="https://github.com/NaoiseGaffney/CitiesInCountries" target="_blank" class="modal-link-text">The documentation and source code on GitHub of this website, my 2<sup>nd</sup> Code Institute Milestone Project.</a></div>
-                        <div><a href="https://ptd--gaffco.repl.co/index.html" target="_blank" class="modal-link-text">GaffCo Consulting Professional Communication Competence.</a></div>
+                        <div><a href="https://naoisegaffney.github.io/Resume/index.html" target="_blank" class="modal-link-text">-> My Resumé.</a></div>
+                        <div><a href="https://github.com/NaoiseGaffney" target="_blank" class="modal-link-text">-> My GitHub.</a></div>
+                        <div><a href="https://github.com/NaoiseGaffney/CitiesInCountries" target="_blank" class="modal-link-text">-> The documentation and source code on GitHub of this website, my 2<sup>nd</sup> Code Institute Milestone Project.</a></div>
+                        <div><a href="https://ptd--gaffco.repl.co/index.html" target="_blank" class="modal-link-text">-> GaffCo Consulting Professional Communication Competence.</a></div>
                         <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
