--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -35,22 +35,17 @@
                 <button class="maptype-control-map" title="Show road map">Map</button>
                 <button class="maptype-control-satellite" title="Show satellite imagery">Satellite</button>
             </div>
-            <div class="controls scale-control scale-control-is-map">
+            <!-- <div class="controls scale-control scale-control-is-map">
                 <button class="scale-control-map" title="Street View">Street View</button>
             </div>
             <div class="controls fullscreen-control">
                 <button title="Toggle Fullscreen">
-                    <!--Changed Google Map Code <div></div> to <span></span> to comply with HTML standards. Works.-->
                     <span class="fullscreen-control-icon fullscreen-control-top-left"></span>
                     <span class="fullscreen-control-icon fullscreen-control-top-right"></span>
                     <span class="fullscreen-control-icon fullscreen-control-bottom-left"></span>
                     <span class="fullscreen-control-icon fullscreen-control-bottom-right"></span>
-                    <!-- <div class="fullscreen-control-icon fullscreen-control-top-left"></div>
-                    <div class="fullscreen-control-icon fullscreen-control-top-right"></div>
-                    <div class="fullscreen-control-icon fullscreen-control-bottom-left"></div>
-                    <div class="fullscreen-control-icon fullscreen-control-bottom-right"></div> -->
                 </button>
-            </div>
+            </div> -->
         </div>
 
         <!-- Fixed Footer Elements for Footer Modals -->
